add css category and header route

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                             <div class="nav-bg-middle">
                                 <ul>
                                     <l1 class="bg-deepred"><a href="#" class="nav-a">Home</a></l1>
-                                    <l1><a href="#" class="nav-a">정보검색</a></l1>
-                                    <l1><a href="#" class="nav-a">전자정보</a></l1>
-                                    <l1><a href="#" class="nav-a">My Library</a></l1>
+                                    <l1 class="arrow"><a href="#" class="nav-a">정보검색</a></l1>
+                                    <l1 class="arrow"><a href="#" class="nav-a">전자정보</a></l1>
+                                    <l1 class="arrow"><a href="#" class="nav-a">My Library</a></l1>
                                     <l1><a href="#" class="nav-a nav-b">My Library</a></l1>
                                 </ul>
                             </div>
@@ -31,18 +31,29 @@
                 </div>
             </div>
         </div>
-        <div class="route">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">MyLibrary</a></li>
-                <li>회원정보</li>
-            </ul>
-        </div>
     </header>
+    <div class="header-sub-block">
+        <div class="header-sub-block-left">
+            <div class="header-sub-block-right">
+                <div class="route">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">MyLibrary</a></li>
+                        <li>회원정보</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="aside-container">
         <aside>
             <div class="sidebar-wrap">
-                <h2>My Library</h2>
+                <div class="left-category">
+                    <div class="right-category">
+                        <h2>My Library</h2>
+                    </div>
+                </div>
+
                 <ul>
                     <li><a href="#">회원정보</a></li>
                     <li><a href="#">대출정보관리</a></li>
@@ -179,10 +190,10 @@
                 <button>삭제</button>
             </div>
         </div>
-        <footer>
-            <address>대전광역시 유성구 관평동 1359번지 한산에스메가 631호 LinkSaaS TEL:(042) 863-0850 FAX:(042) 330-0055</address>
-            <p>All Contents copylight(C) 2000. reserverd by LinkSaaS.CO.,LTD</p>
-        </footer>
     </div>
+    <footer>
+        <address>대전광역시 유성구 관평동 1359번지 한산에스메가 631호 LinkSaaS TEL:(042) 863-0850 FAX:(042) 330-0055</address>
+        <p>All Contents copylight(C) 2000. reserverd by LinkSaaS.CO.,LTD</p>
+    </footer>
 </body>
 </html>
