--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                         <div class="nav-bg-right">
                             <div class="nav-bg-middle">
                                 <ul>
-                                    <l1 class="bg-deepred"><a href="#" class="nav-a">Home</a></l1>
-                                    <l1 class="arrow"><a href="#" class="nav-a">정보검색</a></l1>
-                                    <l1 class="arrow"><a href="#" class="nav-a">전자정보</a></l1>
-                                    <l1 class="arrow"><a href="#" class="nav-a">My Library</a></l1>
+                                    <l1><a href="#" class="nav-a bg-deepred">Home</a></l1>
+                                    <l1><a href="#" class="nav-a">정보검색<img src="../assignment5/img/arrow.png" alt="menuopenbtn"></a></l1>
+                                    <l1><a href="#" class="nav-a">전자정보<img src="../assignment5/img/arrow.png" alt="menuopenbtn"></a></l1>
+                                    <l1"><a href="#" class="nav-a">My Library<img src="../assignment5/img/arrow.png" alt="menuopenbtn"></a></l1>
                                     <l1><a href="#" class="nav-a nav-b">My Library</a></l1>
                                 </ul>
                             </div>
@@ -53,21 +53,24 @@
                         <h2>My Library</h2>
                     </div>
                 </div>
-
-                <ul>
-                    <li><a href="#">회원정보</a></li>
-                    <li><a href="#">대출정보관리</a></li>
-                    <li><a href="#">맞춤정보(SDI)신청</a></li>
-                    <li><a href="#">원문관리서비스</a></li>
-                </ul>
+                <div class="bottom-category">
+                    <div class="middle-category">
+                        <ul>
+                            <li><a href="#">회원정보</a></li>
+                            <li><a href="#">대출정보관리</a></li>
+                            <li><a href="#">맞춤정보(SDI)신청</a></li>
+                            <li><a href="#">원문관리서비스</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </aside>
         <div class="contents-box">
             <h3>맞춤정보(SDI) 신청</h3>
             <div class="btn-section">
-                <button class="">키워드등록</button>
-                <button class="">저널검색</button>
-                <button class="">삭  제</button>
+                <button class="btn">키워드등록</button>
+                <button class="btn">저널검색</button>
+                <button class="btn">삭제</button>
             </div>
             <div class="select-section">
                 총 <span>3건</span>
@@ -78,23 +81,23 @@
                 </select>
             </div>
             <table>
-                <caption></caption>
+                <caption>차트</caption>
                 <colgroup>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
-                    <col>
+                    <col style="width: 7%;">
+                    <col style="width: 7%;">
+                    <col style="width: 16%;">
+                    <col style="width: 10%;">
+                    <col style="width: 40%;">
+                    <col style="width: 20%;">
                 </colgroup>
                 <thead>
                     <tr>
-                        <th>선택</th>
-                        <th>번호</th>
-                        <th>신청일</th>
-                        <th>신청방법</th>
-                        <th>신청정보</th>
-                        <th>제공건수</th>
+                        <th class="no-use-left-border" scope="col">선택</th>
+                        <th scope="col">번호</th>
+                        <th scope="col">신청일</th>
+                        <th scope="col">신청방법</th>
+                        <th scope="col">신청정보</th>
+                        <th class="no-use-right-border" scope="col">제공건수</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -160,7 +163,7 @@
                         <th>신청정보</th>
                         <th>저자</th>
                         <th>출판사</th>
-                        <th>출판년</th>
+                        <th class="no-use-right-border">출판년</th>
                     </tr>
                 </thead>
                 <tbody>
