--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assignment5/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assignment5/layout.css">
     <title>SaaS</title>
 </head>
 <body>
@@ -57,7 +58,7 @@
                 <div class="sidebar-wrap">
                     <div class="left-category">
                         <div class="right-category">
-                            <h2>My Library</h2>
+                            <h2 id="h2-category-logo">My Library</h2>
                         </div>
                     </div>
                     <div class="bottom-category">
@@ -74,7 +75,7 @@
             </aside>
             <div class="contents-box">
                 <div class="first-title">
-                    <h3>맞춤정보(SDI) 신청</h3>
+                    <h3 id="h3-SDI">맞춤정보(SDI) 신청</h3>
                 </div>
                 <div class="btn-section">
                     <div class="plus-btn btn-display">
@@ -240,9 +241,9 @@
                         </div>
                     </div>
                 </div>
-                <h4>제공정보</h4>
+                <h4 id="Info">제공정보</h4>
                 <table class="table2">
-                    <caption></caption>
+                    <caption>차트2</caption>
                     <colgroup>
                         <col>
                         <col>
