--- a/html/index.html
+++ b/html/index.html
@@ -78,29 +78,29 @@
                     <h3 id="h3-SDI">맞춤정보(SDI) 신청</h3>
                 </div>
                 <div class="btn-section">
-                    <div class="plus-btn btn-display">
-                        <div class="btn-right">
-                            <div class="btn-middle">
-                                <a href="#" class="btn">키워드등록</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="search-btn btn-display">
-                        <div class="btn-right">
-                            <div class="btn-middle">
-                                <a href="#" class="btn">저널검색</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="delete-btn btn-display">
-                        <div class="btn-right">
-                            <div class="btn-middle">
-                                <a href="#" class="btn btn-word-spacing">삭 제</a>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="#" class="btn plus-btn btn-display">
+                        <span class="btn-right">
+                            <span class="btn-middle">
+                                키워드 등록
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="btn search-btn btn-display">
+                        <span class="btn-right">
+                            <span class="btn-middle">
+                                저널검색
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="btn btn-word-spacing delete-btn btn-display">
+                        <span class="btn-right">
+                            <span class="btn-middle">
+                                삭 제
+                            </span>
+                        </span>
+                    </a>
                     <div class="select-section">
-                        총 <span>3건</span>
+                        총 <strong>3건</strong>
                         <select name="출력현황" id="output">
                             <option value="10개 출력현황">10개 출력</option>
                             <option value="9개 출력현황">9개 출력</option>
@@ -109,9 +109,9 @@
                     </div>
                 </div>
                 <table class="table1">
-                    <caption>차트</caption>
+                    <caption>맞춤정보신청표</caption>
                     <colgroup>
-                        <col style="width: 6%;">
+                        <col style="width: 6%; min-width: 100px;">
                         <col style="width: 6%;">
                         <col style="width: 15.5%;">
                         <col style="width: 12.5%;">
@@ -120,12 +120,12 @@
                     </colgroup>
                     <thead>
                         <tr>
-                            <th class="no-use-left-border" scope="col">선택</th>
-                            <th scope="col">번호</th>
-                            <th scope="col">신청일</th>
-                            <th scope="col">신청방법</th>
-                            <th scope="col">신청정보</th>
-                            <th class="no-use-right-border" scope="col">제공건수</th>
+                            <th title="선택" class="no-use-left-border" scope="col">선택</th>
+                            <th title="번호" scope="col">번호</th>
+                            <th title="신청일" scope="col">신청일</th>
+                            <th title="신청방법" scope="col">신청방법</th>
+                            <th title="신청정보" scope="col">신청정보</th>
+                            <th title="제공건수" class="no-use-right-border" scope="col">제공건수</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -156,90 +156,90 @@
                     </tbody>
                 </table>
                 <div class="paging">
-                    <div class="prev-btn-left btn-display">
-                        <div class="prev-btn-right">
-                            <div class="pn-btn-middle">
-                                <a href="#" class="left-side">PREV</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">1</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="clicked-num-left btn-display">
-                        <div class="clicked-num-right">
-                            <div class="clicked-num-middle">
-                                <a href="#" class="num-clicked">2</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">3</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">4</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">5</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">6</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">7</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">8</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">9</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="num-left btn-display">
-                        <div class="num-right">
-                            <div class="num-middle">
-                                <a href="#" class="num">10</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="next-btn-left btn-display">
-                        <div class="next-btn-right">
-                            <div class="pn-btn-middle">
-                                <a href="#" class="right-side">NEXT</a>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="#" class="left-side prev-btn-left btn-display">
+                        <span class="prev-btn-right">
+                            <span class="pn-btn-middle">
+                                PREV
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                1
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-clicked clicked-num-left btn-display">
+                        <span class="clicked-num-right">
+                            <span class="clicked-num-middle">
+                                2
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                3
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                4
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                5
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                6
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                7
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                8
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                9
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="num-left btn-display num">
+                        <span class="num-right">
+                            <span class="num-middle">
+                                10
+                            </span>
+                        </span>
+                    </a>
+                    <a href="#" class="right-side next-btn-left btn-display">
+                        <span class="next-btn-right">
+                            <span class="pn-btn-middle">
+                                NEXT
+                            </span>
+                        </span>
+                    </a>
                 </div>
                 <h4 id="Info">제공정보</h4>
                 <div class="btn-section">
@@ -248,7 +248,7 @@
                     </div>
                 </div>
                 <table class="table2">
-                    <caption>차트2</caption>
+                    <caption>제공정보표</caption>
                     <colgroup>
                         <col style="width: 5%;">
                         <col style="width: 5%;">
@@ -261,14 +261,14 @@
                     </colgroup>
                     <thead>
                         <tr>
-                            <th>선택</th>
-                            <th>번호</th>
-                            <th>제공일</th>
-                            <th>유형</th>
-                            <th>신청정보</th>
-                            <th>저자</th>
-                            <th>출판사</th>
-                            <th class="no-use-right-border">출판년</th>
+                            <th title="선택" scope="col">선택</th>
+                            <th title="번호" scope="col">번호</th>
+                            <th title="제공일" scope="col">제공일</th>
+                            <th title="유형" scope="col">유형</th>
+                            <th title="신청정보" scope="col">신청정보</th>
+                            <th title="저자" scope="col">저자</th>
+                            <th title="출판사" scope="col">출판사</th>
+                            <th title="출판년" class="no-use-right-border" scope="col">출판년</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -295,13 +295,13 @@
                     </tbody>
                 </table>
                 <div class="btn-section-right-align">
-                    <div class="delete-btn btn-display">
-                        <div class="btn-right">
-                            <div class="btn-middle">
-                                <a href="#" class="btn btn-word-spacing">삭 제</a>
-                            </div>
-                        </div>
-                    </div>
+                    <a href="#" class="btn delete-btn">
+                        <span class="btn-right">
+                            <span class="btn-middle btn-word-spacing">
+                                삭 제
+                            </span>
+                        </span>
+                    </a>
                 </div>
             </div>
         </div>
