--- a/html/index.html
+++ b/html/index.html
@@ -401,7 +401,7 @@
                     </div>
                     <div class="chart-section">
                         <table>
-                            <caption>차트</caption>
+                            <caption>시민의식 국제비교 조사표</caption>
                             <colgroup>
                                 <col style="width: 7%;">
                                 <col style="width: 7%;">
