web display middle position #14

--- a/html/index.html
+++ b/html/index.html
@@ -17,40 +17,41 @@
                         <h1 id="logo">
                             <a href="#">LinkSaaS</a>
                         </h1>
-                        <nav id="nav-wrap">
+                        <div id="nav-wrap">
                             <div class="nav-bg-right">
                                 <div class="nav-bg-middle">
                                     <ul id="navbar-guide">
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a bg-deepred">Home</a>
+                                            <a href="#" class="nav-a bg-deepred"><img src="../img/header/nav-home.png" alt="Home"></a>
                                         </l1>
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a nav-hover-a">정보검색<img src="../img/arrow.png" alt="menuopenbtn"></a>
+                                            <a href="#" class="nav-a nav-hover-a"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#">논문검색</a></li>
                                                 <li class="hover-popup-list"><a href="#">단행본검색</a></li>
                                             </ul>
                                         </l1>
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a nav-hover-a">전자정보<img src="../img/arrow.png" alt="menuopenbtn"></a>
+                                            <a href="#" class="nav-a nav-hover-a"><img src="../img/header/nav-info2.png" alt="전자정보"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#">논문검색</a></li>
                                                 <li class="hover-popup-list"><a href="#">단행본검색</a></li>
                                             </ul>
                                         </l1>
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a nav-c nav-hover-a">My Library<img src="../img/arrow.png" alt="menuopenbtn"></a>
+                                            <a href="#" class="nav-a nav-c nav-hover-a"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#">논문검색</a></li>
                                                 <li class="hover-popup-list"><a href="#">단행본검색</a></li>
                                             </ul>
                                         </l1>
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a nav-b">My Library</a></l1>
+                                            <a href="#" class="nav-a nav-b">My Library</a>
+                                        </l1>
                                     </ul>
                                 </div>
                             </div>
-                        </nav>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -663,13 +664,15 @@
         </div>
         <label for="popupbtn"></label>
     </div>
-    <footer>
-        <div class="footer-img">
-            <a href="#header-wrap">LinkSaaS</a>
-        </div>
-        <div class="footer-contents">
-            <address>대전광역시 유성구 관평동 1359번지 한산에스메가 631호 LinkSaaS TEL:(042) 863-0850 FAX:(042) 330-0055</address>
-            <p>All Contents copylight(C) 2000. reserverd by LinkSaaS.CO.,LTD</p>
+    <footer id="footer-wrap">
+        <div class="footer-container">
+            <div class="footer-img">
+                <a href="#header-wrap">LinkSaaS</a>
+            </div>
+            <div class="footer-contents">
+                <address>대전광역시 유성구 관평동 1359번지 한산에스메가 631호 LinkSaaS TEL:(042) 863-0850 FAX:(042) 330-0055</address>
+                <p>All Contents copylight(C) 2000. reserverd by LinkSaaS.CO.,LTD</p>
+            </div>
         </div>
     </footer>
 </body>
